Updated data to 04/21/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -423,6 +423,7 @@
 <script src=IntData_390.js></script>
 <script src=IntData_391.js></script>
 <script src=IntData_392.js></script>
+<script src=IntData_393.js></script>
 
 <script>
 
