--- a/covid19reg.html
+++ b/covid19reg.html
@@ -423,6 +423,7 @@
 <script src=RegData_390.js></script>
 <script src=RegData_391.js></script>
 <script src=RegData_392.js></script>
+<script src=RegData_393.js></script>
 
 <script>
 
