--- a/covid19usa.html
+++ b/covid19usa.html
@@ -391,6 +391,7 @@
 <script src=USAData_390.js></script>
 <script src=USAData_391.js></script>
 <script src=USAData_392.js></script>
+<script src=USAData_393.js></script>
 
 <script>
 
