Updated data to 04/25/2021 (4 days worth)

--- a/covid19int.html
+++ b/covid19int.html
@@ -424,6 +424,10 @@
 <script src=IntData_391.js></script>
 <script src=IntData_392.js></script>
 <script src=IntData_393.js></script>
+<script src=IntData_394.js></script>
+<script src=IntData_395.js></script>
+<script src=IntData_396.js></script>
+<script src=IntData_397.js></script>
 
 <script>
 
