--- a/covid19usa.html
+++ b/covid19usa.html
@@ -392,6 +392,10 @@
 <script src=USAData_391.js></script>
 <script src=USAData_392.js></script>
 <script src=USAData_393.js></script>
+<script src=USAData_394.js></script>
+<script src=USAData_395.js></script>
+<script src=USAData_396.js></script>
+<script src=USAData_397.js></script>
 
 <script>
 
