--- a/covid19reg.html
+++ b/covid19reg.html
@@ -424,6 +424,10 @@
 <script src=RegData_391.js></script>
 <script src=RegData_392.js></script>
 <script src=RegData_393.js></script>
+<script src=RegData_394.js></script>
+<script src=RegData_395.js></script>
+<script src=RegData_396.js></script>
+<script src=RegData_397.js></script>
 
 <script>
 
