Updated data to 04/26/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -428,6 +428,7 @@
 <script src=IntData_395.js></script>
 <script src=IntData_396.js></script>
 <script src=IntData_397.js></script>
+<script src=IntData_398.js></script>
 
 <script>
 
