--- a/covid19reg.html
+++ b/covid19reg.html
@@ -428,6 +428,7 @@
 <script src=RegData_395.js></script>
 <script src=RegData_396.js></script>
 <script src=RegData_397.js></script>
+<script src=RegData_398.js></script>
 
 <script>
 
