--- a/covid19state.html
+++ b/covid19state.html
@@ -371,6 +371,7 @@
 <script src=USAData_395.js></script>
 <script src=USAData_396.js></script>
 <script src=USAData_397.js></script>
+<script src=USAData_398.js></script>
 
 <script>
 
