--- a/covid19usa.html
+++ b/covid19usa.html
@@ -396,6 +396,7 @@
 <script src=USAData_395.js></script>
 <script src=USAData_396.js></script>
 <script src=USAData_397.js></script>
+<script src=USAData_398.js></script>
 
 <script>
 
