Updated data to 05/01/2021 (four days data)

--- a/covid19int.html
+++ b/covid19int.html
@@ -430,6 +430,10 @@
 <script src=IntData_397.js></script>
 <script src=IntData_398.js></script>
 <script src=IntData_399.js></script>
+<script src=IntData_400.js></script>
+<script src=IntData_401.js></script>
+<script src=IntData_402.js></script>
+<script src=IntData_403.js></script>
 
 <script>
 
