--- a/covid19reg.html
+++ b/covid19reg.html
@@ -430,6 +430,10 @@
 <script src=RegData_397.js></script>
 <script src=RegData_398.js></script>
 <script src=RegData_399.js></script>
+<script src=RegData_400.js></script>
+<script src=RegData_401.js></script>
+<script src=RegData_402.js></script>
+<script src=RegData_403.js></script>
 
 <script>
 
