--- a/covid19usa.html
+++ b/covid19usa.html
@@ -398,6 +398,10 @@
 <script src=USAData_397.js></script>
 <script src=USAData_398.js></script>
 <script src=USAData_399.js></script>
+<script src=USAData_400.js></script>
+<script src=USAData_401.js></script>
+<script src=USAData_402.js></script>
+<script src=USAData_403.js></script>
 
 <script>
 
