Updated data to 05/02/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -434,6 +434,7 @@
 <script src=IntData_401.js></script>
 <script src=IntData_402.js></script>
 <script src=IntData_403.js></script>
+<script src=IntData_404.js></script>
 
 <script>
 
