--- a/covid19reg.html
+++ b/covid19reg.html
@@ -434,6 +434,7 @@
 <script src=RegData_401.js></script>
 <script src=RegData_402.js></script>
 <script src=RegData_403.js></script>
+<script src=RegData_404.js></script>
 
 <script>
 
