--- a/covid19usa.html
+++ b/covid19usa.html
@@ -402,6 +402,7 @@
 <script src=USAData_401.js></script>
 <script src=USAData_402.js></script>
 <script src=USAData_403.js></script>
+<script src=USAData_404.js></script>
 
 <script>
 
