Updated data to 05/07/2021 (five days worth)

--- a/covid19int.html
+++ b/covid19int.html
@@ -435,6 +435,11 @@
 <script src=IntData_402.js></script>
 <script src=IntData_403.js></script>
 <script src=IntData_404.js></script>
+<script src=IntData_405.js></script>
+<script src=IntData_406.js></script>
+<script src=IntData_407.js></script>
+<script src=IntData_408.js></script>
+<script src=IntData_409.js></script>
 
 <script>
 
