--- a/covid19reg.html
+++ b/covid19reg.html
@@ -435,6 +435,11 @@
 <script src=RegData_402.js></script>
 <script src=RegData_403.js></script>
 <script src=RegData_404.js></script>
+<script src=RegData_405.js></script>
+<script src=RegData_406.js></script>
+<script src=RegData_407.js></script>
+<script src=RegData_408.js></script>
+<script src=RegData_409.js></script>
 
 <script>
 
