--- a/covid19usa.html
+++ b/covid19usa.html
@@ -403,6 +403,11 @@
 <script src=USAData_402.js></script>
 <script src=USAData_403.js></script>
 <script src=USAData_404.js></script>
+<script src=USAData_405.js></script>
+<script src=USAData_406.js></script>
+<script src=USAData_407.js></script>
+<script src=USAData_408.js></script>
+<script src=USAData_409.js></script>
 
 <script>
 
