Updated data to 05/13/2021 (six days)

--- a/covid19int.html
+++ b/covid19int.html
@@ -440,6 +440,12 @@
 <script src=IntData_407.js></script>
 <script src=IntData_408.js></script>
 <script src=IntData_409.js></script>
+<script src=IntData_410.js></script>
+<script src=IntData_411.js></script>
+<script src=IntData_412.js></script>
+<script src=IntData_413.js></script>
+<script src=IntData_414.js></script>
+<script src=IntData_415.js></script>
 
 <script>
 
