--- a/covid19usa.html
+++ b/covid19usa.html
@@ -408,6 +408,12 @@
 <script src=USAData_407.js></script>
 <script src=USAData_408.js></script>
 <script src=USAData_409.js></script>
+<script src=USAData_410.js></script>
+<script src=USAData_411.js></script>
+<script src=USAData_412.js></script>
+<script src=USAData_413.js></script>
+<script src=USAData_414.js></script>
+<script src=USAData_415.js></script>
 
 <script>
 
