--- a/covid19reg.html
+++ b/covid19reg.html
@@ -440,6 +440,12 @@
 <script src=RegData_407.js></script>
 <script src=RegData_408.js></script>
 <script src=RegData_409.js></script>
+<script src=RegData_410.js></script>
+<script src=RegData_411.js></script>
+<script src=RegData_412.js></script>
+<script src=RegData_413.js></script>
+<script src=RegData_414.js></script>
+<script src=RegData_415.js></script>
 
 <script>
 
