Updated data to 05/16/2021 (three days)

--- a/covid19int.html
+++ b/covid19int.html
@@ -446,6 +446,9 @@
 <script src=IntData_413.js></script>
 <script src=IntData_414.js></script>
 <script src=IntData_415.js></script>
+<script src=IntData_416.js></script>
+<script src=IntData_417.js></script>
+<script src=IntData_418.js></script>
 
 <script>
 
