--- a/covid19reg.html
+++ b/covid19reg.html
@@ -446,6 +446,9 @@
 <script src=RegData_413.js></script>
 <script src=RegData_414.js></script>
 <script src=RegData_415.js></script>
+<script src=RegData_416.js></script>
+<script src=RegData_417.js></script>
+<script src=RegData_418.js></script>
 
 <script>
 
