--- a/covid19state.html
+++ b/covid19state.html
@@ -389,6 +389,9 @@
 <script src=USAData_413.js></script>
 <script src=USAData_414.js></script>
 <script src=USAData_415.js></script>
+<script src=USAData_416.js></script>
+<script src=USAData_417.js></script>
+<script src=USAData_418.js></script>
 
 <script>
 
