--- a/covid19usa.html
+++ b/covid19usa.html
@@ -417,6 +417,18 @@
 <script src=USAData_416.js></script>
 <script src=USAData_417.js></script>
 <script src=USAData_418.js></script>
+<script src=USAData_419.js></script>
+<script src=USAData_420.js></script>
+<script src=USAData_421.js></script>
+<script src=USAData_422.js></script>
+<script src=USAData_423.js></script>
+<script src=USAData_424.js></script>
+<script src=USAData_425.js></script>
+<script src=USAData_426.js></script>
+<script src=USAData_427.js></script>
+<script src=USAData_428.js></script>
+<script src=USAData_429.js></script>
+<script src=USAData_430.js></script>
 
 <script>
 
