--- a/covid19int.html
+++ b/covid19int.html
@@ -21,7 +21,7 @@
 	</div>
 	<div class = "Row">
 		<div class = "ChartCell">
-			<canvas id="ChartArea" width=1300 height=900 style="border:0px solid #ffffff; background-color:white;">
+			<canvas id="ChartArea" width=1400 height=1600 style="border:0px solid #ffffff; background-color:white;">
 			Your browser does not support HTML5
 			</canvas>
 		</div>
@@ -29,6 +29,9 @@
 </div>
 
 </body>
+
+<script src=VaxSource.js></script>
+<script src=VaxDataCountry.js></script>
 
 <script src=IntData_0.js></script>
 <script src=IntData_1.js></script>
@@ -449,6 +452,18 @@
 <script src=IntData_416.js></script>
 <script src=IntData_417.js></script>
 <script src=IntData_418.js></script>
+<script src=IntData_419.js></script>
+<script src=IntData_420.js></script>
+<script src=IntData_421.js></script>
+<script src=IntData_422.js></script>
+<script src=IntData_423.js></script>
+<script src=IntData_424.js></script>
+<script src=IntData_425.js></script>
+<script src=IntData_426.js></script>
+<script src=IntData_427.js></script>
+<script src=IntData_428.js></script>
+<script src=IntData_429.js></script>
+<script src=IntData_430.js></script>
 
 <script>
 
@@ -469,6 +484,19 @@ function ClearScreen()
 	ctx.globalAlpha = 1.0;
 	ctx.fillStyle = "white";
 	ctx.fillRect(0,0,canvas.width,canvas.height);
+}
+
+function GetVaccine(Country)
+{
+	var x;
+	for(x=0;x<VaxByCountry.length;x++)
+		if(VaxByCountry[x].Location.localeCompare(Country) == 0)
+			break;
+
+	if(x == VaxByCountry.length)
+		return("");
+	else
+		return(VaxByCountry[x].Data[0].Vaccines)
 }
 
 function PrepData()
@@ -502,6 +530,9 @@ function PrepData()
 				Data.DeathsPerCapita = 0;
 				Data.DeathRate = 0;
 			}
+
+			// try and get vaccine source
+			Data.Vax = GetVaccine(Data.Region);
 		}
 
 		ReportDate[di].Prepped = true;
@@ -518,12 +549,17 @@ function XYChart(TopLeft, SizeXY, XEmphasis, XYLabels, ValueSeries1, ValueSeries
 	var RunningAverage = [];
 	var RunningAveragePeriods = 10;
 
-	for(x=0;x<ValueSeries1.length;x++)
+	if(Option == 3)
+		Max = 100;
+	else
 	{
-		if(Max < ValueSeries1[x])
-			Max = ValueSeries1[x];
-		if(Max < ValueSeries2[x])
-			Max = ValueSeries2[x];
+		for(x=0;x<ValueSeries1.length;x++)
+		{
+			if(Max < ValueSeries1[x])
+				Max = ValueSeries1[x];
+			if(Max < ValueSeries2[x])
+				Max = ValueSeries2[x];
+		}
 	}
 
 	YScale = SizeXY[1] / Max;
@@ -687,8 +723,17 @@ function XYChart(TopLeft, SizeXY, XEmphasis, XYLabels, ValueSeries1, ValueSeries
 	ctx.closePath();
 	ctx.fill();
 
-	ctx.textAlign = "left";
-	ctx.textBaseline = "bottom";
+	// draw calibration lines
+	ctx.strokeStyle = "white";
+	ctx.moveTo(TopLeft[0],TopLeft[1]+(SizeXY[1]/4));
+	ctx.lineTo(TopLeft[0]+SizeXY[0],TopLeft[1]+(SizeXY[1]/4));
+	ctx.stroke();
+	ctx.moveTo(TopLeft[0],TopLeft[1]+(SizeXY[1]/2));
+	ctx.lineTo(TopLeft[0]+SizeXY[0],TopLeft[1]+(SizeXY[1]/2));
+	ctx.stroke();
+	ctx.moveTo(TopLeft[0],TopLeft[1]+(SizeXY[1] * 0.75));
+	ctx.lineTo(TopLeft[0]+SizeXY[0],TopLeft[1]+(SizeXY[1] * 0.75));
+	ctx.stroke();
 }
 
 function Pie(CenterX, CenterY, Radius, Amounts, Labels)
@@ -807,6 +852,7 @@ var StateIndex;
 var CountyIndex;
 var DisplayIndex = 0;
 var ClickData;
+var VaccineClickData;
 var x,y,z;
 
 for(x=0;x<ReportDate.length;x++)
@@ -852,6 +898,12 @@ function DrawCountyData()
 	ctx.fillStyle = "blue";
 	ctx.fillText(ClickData.Region,dx,dy);
 	dy += FontSize;
+
+	if(ClickData.Vax.length != 0)
+	{
+		ctx.font = "normal 10px Courier";
+		ctx.fillText(ClickData.Vax,dx,dy);
+	}
 
 	ctx.font = "normal 12px Courier";
 
@@ -946,6 +998,11 @@ function DrawCountyData()
 	ctx.fillText("Fatality Trend Direction:",dx,dy);
 	ctx.fillStyle = "darkred";
 	ctx.fillText(ClickData.TrendDeaths==0?"Even":ClickData.TrendDeaths<0?"Down":"Up",dx+StatColumn,dy);
+	// dy += FontSize;
+	// ctx.fillStyle = "black";
+	// ctx.fillText("Vaccine(s) in use:",dx,dy);
+	// ctx.fillStyle = "darkred";
+	// ctx.fillText(ClickData.Vax,dx+StatColumn,dy);
 
 	ctx.textAlign = "left";
 	ctx.textBaseline = "bottom";
@@ -986,7 +1043,19 @@ StateSelect.onchange = function()
 		console.log(State + " was not found");
 		return;
 	}
-	
+
+	// locate vaccination data, if any
+	for(x=0;x<VaxStatsByCountry.length;x++)
+	{
+		if( VaxStatsByCountry[x].Location.localeCompare(State) == 0)
+		{
+			VaccineClickData = VaxStatsByCountry[x];
+			break;
+		}
+	}
+	if(x == VaxStatsByCountry.length)
+		VaccineClickData = "none";
+
 	// now get history data for that county
 	var UndefinedData = { Cases : 0, Deaths : 0 };
 	ClickData.HistoryData = new Array(ReportDate.length);	// for tying clickdata to other dates for graphs
@@ -1001,6 +1070,7 @@ StateSelect.onchange = function()
 			*/
 			{
 				ClickData.HistoryData[x] = ReportDate[x].Data[y];
+				ClickData.HistoryData[x].Date = ReportDate[x].Date;
 				break;
 			}
 		}
@@ -1074,6 +1144,9 @@ StateSelect.onchange = function()
 	var Deaths = [];
 	var DeltaCases = [];
 	var DeltaDeaths = [];
+	var TotalVaccinations = [];
+	var PeopleVaccinatedPercentage = [];
+	var DailyVaccinations = [];
 
 	for(x=0;x<ClickData.HistoryData.length;x++)
 	{
@@ -1081,6 +1154,45 @@ StateSelect.onchange = function()
 		Deaths[x] = ClickData.HistoryData[x].Deaths;
 		DeltaCases[x] = ClickData.HistoryData[x].DeltaCases;
 		DeltaDeaths[x] = ClickData.HistoryData[x].DeltaDeaths;
+		if((typeof VaccineClickData).localeCompare("object") == 0)
+		{
+			for(y=0;y<VaccineClickData.Data.length;y++)
+			{
+				if(VaccineClickData.Data[y].Date.localeCompare(ClickData.HistoryData[x].Date) == 0)
+					break;
+			}
+			if(y == VaccineClickData.Data.length)	// not found - zero out
+			{
+				TotalVaccinations[x] = 0;
+				PeopleVaccinatedPercentage[x] = 0;
+				DailyVaccinations[x] = 0;
+			}
+			else	// found
+			{
+				if(VaccineClickData.Data[y].Pop != 0)
+				{
+					TotalVaccinations[x] = VaccineClickData.Data[y].TotalVaccinations;
+					if(VaccineClickData.Data[y].PeopleVaccinated != 0)
+						PeopleVaccinatedPercentage[x] = (VaccineClickData.Data[y].PeopleVaccinated / (VaccineClickData.Data[y].Pop * 1000) * 100);
+					else
+						if(x!=0)
+							PeopleVaccinatedPercentage[x] = PeopleVaccinatedPercentage[x-1];
+					DailyVaccinations[x] = VaccineClickData.Data[y].DailyVaccinations;
+				}
+				else
+				{
+					TotalVaccinations[x] = 0;
+					PeopleVaccinatedPercentage[x] = 0;
+					DailyVaccinations[x] = 0;
+				}
+			}
+		}
+		else	// data was not present - zero it out
+		{
+			TotalVaccinations[x] = 0;
+			PeopleVaccinatedPercentage[x] = 0;
+			DailyVaccinations[x] = 0;
+		}
 	}
 
 	ClearScreen();
@@ -1091,6 +1203,9 @@ StateSelect.onchange = function()
 
 	// XYChart([ChartLoc[0],ChartLoc[1]+ChartDim[1]+70],[ChartDim[0],ChartDim[1]/3],ReportDate.length-1,["Days since 3/22","Daily Cases With 10 Day Trend"],DeltaCases,DeltaDeaths,0);
 	XYChart([ChartLoc[0],ChartLoc[1]+ChartDim[1]+70],[ChartDim[0],ChartDim[1]],ReportDate.length-1,["Days since 3/22","Daily Cases With 10 Day Trend"],DeltaCases,DeltaDeaths,0);
+
+	if((typeof VaccineClickData).localeCompare("object") == 0)
+		XYChart([ChartLoc[0],ChartLoc[1]+(ChartDim[1]*2)+140],[ChartDim[0],ChartDim[1]],ReportDate.length-1,["Days since 3/22","Vaccinated People % of Population"],PeopleVaccinatedPercentage,[],3);
 }
 
 </script>
