--- a/covid19reg.html
+++ b/covid19reg.html
@@ -464,6 +464,8 @@
 <script src=RegData_428.js></script>
 <script src=RegData_429.js></script>
 <script src=RegData_430.js></script>
+<script src=RegData_431.js></script>
+<script src=RegData_432.js></script>
 
 <script>
 
