--- a/covid19state.html
+++ b/covid19state.html
@@ -406,6 +406,8 @@
 <script src=USAData_428.js></script>
 <script src=USAData_429.js></script>
 <script src=USAData_430.js></script>
+<script src=USAData_431.js></script>
+<script src=USAData_432.js></script>
 
 <script>
 
