--- a/covid19reg.html
+++ b/covid19reg.html
@@ -466,6 +466,7 @@
 <script src=RegData_430.js></script>
 <script src=RegData_431.js></script>
 <script src=RegData_432.js></script>
+<script src=RegData_433.js></script>
 
 <script>
 
