--- a/covid19usa.html
+++ b/covid19usa.html
@@ -431,6 +431,7 @@
 <script src=USAData_430.js></script>
 <script src=USAData_431.js></script>
 <script src=USAData_432.js></script>
+<script src=USAData_433.js></script>
 
 <script>
 
