--- a/covid19usa.html
+++ b/covid19usa.html
@@ -432,6 +432,8 @@
 <script src=USAData_431.js></script>
 <script src=USAData_432.js></script>
 <script src=USAData_433.js></script>
+<script src=USAData_434.js></script>
+<script src=USAData_435.js></script>
 
 <script>
 
