Updated data to 06/03/2021 + vax data

--- a/covid19int.html
+++ b/covid19int.html
@@ -469,6 +469,7 @@
 <script src=IntData_433.js></script>
 <script src=IntData_434.js></script>
 <script src=IntData_435.js></script>
+<script src=IntData_436.js></script>
 
 <script>
 
