--- a/covid19reg.html
+++ b/covid19reg.html
@@ -469,6 +469,7 @@
 <script src=RegData_433.js></script>
 <script src=RegData_434.js></script>
 <script src=RegData_435.js></script>
+<script src=RegData_436.js></script>
 
 <script>
 
