--- a/covid19state.html
+++ b/covid19state.html
@@ -411,6 +411,7 @@
 <script src=USAData_433.js></script>
 <script src=USAData_434.js></script>
 <script src=USAData_435.js></script>
+<script src=USAData_436.js></script>
 
 <script>
 
