Updated data to 06/06/2021 + vax data (three days)

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -470,6 +470,9 @@
 <script src=RegData_434.js></script>
 <script src=RegData_435.js></script>
 <script src=RegData_436.js></script>
+<script src=RegData_437.js></script>
+<script src=RegData_438.js></script>
+<script src=RegData_439.js></script>
 
 <script>
 
