--- a/covid19state.html
+++ b/covid19state.html
@@ -412,6 +412,9 @@
 <script src=USAData_434.js></script>
 <script src=USAData_435.js></script>
 <script src=USAData_436.js></script>
+<script src=USAData_437.js></script>
+<script src=USAData_438.js></script>
+<script src=USAData_439.js></script>
 
 <script>
 
