--- a/covid19int.html
+++ b/covid19int.html
@@ -470,6 +470,9 @@
 <script src=IntData_434.js></script>
 <script src=IntData_435.js></script>
 <script src=IntData_436.js></script>
+<script src=IntData_437.js></script>
+<script src=IntData_438.js></script>
+<script src=IntData_439.js></script>
 
 <script>
 
