Updated data to 06/10/2021 + vax data (four days worth)

--- a/covid19int.html
+++ b/covid19int.html
@@ -473,6 +473,10 @@
 <script src=IntData_437.js></script>
 <script src=IntData_438.js></script>
 <script src=IntData_439.js></script>
+<script src=IntData_440.js></script>
+<script src=IntData_441.js></script>
+<script src=IntData_442.js></script>
+<script src=IntData_443.js></script>
 
 <script>
 
