--- a/covid19reg.html
+++ b/covid19reg.html
@@ -473,6 +473,10 @@
 <script src=RegData_437.js></script>
 <script src=RegData_438.js></script>
 <script src=RegData_439.js></script>
+<script src=RegData_440.js></script>
+<script src=RegData_441.js></script>
+<script src=RegData_442.js></script>
+<script src=RegData_443.js></script>
 
 <script>
 
