--- a/covid19usa.html
+++ b/covid19usa.html
@@ -438,6 +438,10 @@
 <script src=USAData_437.js></script>
 <script src=USAData_438.js></script>
 <script src=USAData_439.js></script>
+<script src=USAData_440.js></script>
+<script src=USAData_441.js></script>
+<script src=USAData_442.js></script>
+<script src=USAData_443.js></script>
 
 <script>
 
