Updated data to 06/13/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -477,6 +477,9 @@
 <script src=IntData_441.js></script>
 <script src=IntData_442.js></script>
 <script src=IntData_443.js></script>
+<script src=IntData_444.js></script>
+<script src=IntData_445.js></script>
+<script src=IntData_446.js></script>
 
 <script>
 
