--- a/covid19reg.html
+++ b/covid19reg.html
@@ -477,6 +477,9 @@
 <script src=RegData_441.js></script>
 <script src=RegData_442.js></script>
 <script src=RegData_443.js></script>
+<script src=RegData_444.js></script>
+<script src=RegData_445.js></script>
+<script src=RegData_446.js></script>
 
 <script>
 
