--- a/covid19usa.html
+++ b/covid19usa.html
@@ -442,6 +442,9 @@
 <script src=USAData_441.js></script>
 <script src=USAData_442.js></script>
 <script src=USAData_443.js></script>
+<script src=USAData_444.js></script>
+<script src=USAData_445.js></script>
+<script src=USAData_446.js></script>
 
 <script>
 
