Updated data to 06/18/2021 + vax data (5 days)

--- a/covid19int.html
+++ b/covid19int.html
@@ -480,6 +480,11 @@
 <script src=IntData_444.js></script>
 <script src=IntData_445.js></script>
 <script src=IntData_446.js></script>
+<script src=IntData_447.js></script>
+<script src=IntData_448.js></script>
+<script src=IntData_449.js></script>
+<script src=IntData_450.js></script>
+<script src=IntData_451.js></script>
 
 <script>
 
