--- a/covid19reg.html
+++ b/covid19reg.html
@@ -480,6 +480,11 @@
 <script src=RegData_444.js></script>
 <script src=RegData_445.js></script>
 <script src=RegData_446.js></script>
+<script src=RegData_447.js></script>
+<script src=RegData_448.js></script>
+<script src=RegData_449.js></script>
+<script src=RegData_450.js></script>
+<script src=RegData_451.js></script>
 
 <script>
 
