--- a/covid19state.html
+++ b/covid19state.html
@@ -422,6 +422,11 @@
 <script src=USAData_444.js></script>
 <script src=USAData_445.js></script>
 <script src=USAData_446.js></script>
+<script src=USAData_447.js></script>
+<script src=USAData_448.js></script>
+<script src=USAData_449.js></script>
+<script src=USAData_450.js></script>
+<script src=USAData_451.js></script>
 
 <script>
 
