Updated data to 06/26/2021 + vax data (six days data)

--- a/covid19int.html
+++ b/covid19int.html
@@ -487,6 +487,12 @@
 <script src=IntData_451.js></script>
 <script src=IntData_452.js></script>
 <script src=IntData_453.js></script>
+<script src=IntData_454.js></script>
+<script src=IntData_455.js></script>
+<script src=IntData_456.js></script>
+<script src=IntData_457.js></script>
+<script src=IntData_458.js></script>
+<script src=IntData_459.js></script>
 
 <script>
 
