--- a/covid19reg.html
+++ b/covid19reg.html
@@ -487,6 +487,12 @@
 <script src=RegData_451.js></script>
 <script src=RegData_452.js></script>
 <script src=RegData_453.js></script>
+<script src=RegData_454.js></script>
+<script src=RegData_455.js></script>
+<script src=RegData_456.js></script>
+<script src=RegData_457.js></script>
+<script src=RegData_458.js></script>
+<script src=RegData_459.js></script>
 
 <script>
 
