--- a/covid19usa.html
+++ b/covid19usa.html
@@ -452,6 +452,12 @@
 <script src=USAData_451.js></script>
 <script src=USAData_452.js></script>
 <script src=USAData_453.js></script>
+<script src=USAData_454.js></script>
+<script src=USAData_455.js></script>
+<script src=USAData_456.js></script>
+<script src=USAData_457.js></script>
+<script src=USAData_458.js></script>
+<script src=USAData_459.js></script>
 
 <script>
 
