Updated data to 07/06/2021 + vax data (two days)

--- a/covid19int.html
+++ b/covid19int.html
@@ -500,6 +500,8 @@
 <script src=IntData_464.js></script>
 <script src=IntData_465.js></script>
 <script src=IntData_466.js></script>
+<script src=IntData_467.js></script>
+<script src=IntData_468.js></script>
 
 <script>
 
