--- a/covid19usa.html
+++ b/covid19usa.html
@@ -465,6 +465,8 @@
 <script src=USAData_464.js></script>
 <script src=USAData_465.js></script>
 <script src=USAData_466.js></script>
+<script src=USAData_467.js></script>
+<script src=USAData_468.js></script>
 
 <script>
 
