--- a/covid19reg.html
+++ b/covid19reg.html
@@ -500,6 +500,8 @@
 <script src=RegData_464.js></script>
 <script src=RegData_465.js></script>
 <script src=RegData_466.js></script>
+<script src=RegData_467.js></script>
+<script src=RegData_468.js></script>
 
 <script>
 
