Updated data to 07/10/2021 + vaxdata (two days worth)

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -505,6 +505,8 @@
 <script src=RegData_469.js></script>
 <script src=RegData_470.js></script>
 <script src=RegData_471.js></script>
+<script src=RegData_472.js></script>
+<script src=RegData_473.js></script>
 
 <script>
 
