--- a/covid19state.html
+++ b/covid19state.html
@@ -447,6 +447,8 @@
 <script src=USAData_469.js></script>
 <script src=USAData_470.js></script>
 <script src=USAData_471.js></script>
+<script src=USAData_472.js></script>
+<script src=USAData_473.js></script>
 
 <script>
 
