--- a/covid19int.html
+++ b/covid19int.html
@@ -505,6 +505,8 @@
 <script src=IntData_469.js></script>
 <script src=IntData_470.js></script>
 <script src=IntData_471.js></script>
+<script src=IntData_472.js></script>
+<script src=IntData_473.js></script>
 
 <script>
 
