Updated data to 07/14/2021 + vaxdata (two days)

--- a/covid19int.html
+++ b/covid19int.html
@@ -509,6 +509,8 @@
 <script src=IntData_473.js></script>
 <script src=IntData_474.js></script>
 <script src=IntData_475.js></script>
+<script src=IntData_476.js></script>
+<script src=IntData_477.js></script>
 
 <script>
 
