--- a/covid19reg.html
+++ b/covid19reg.html
@@ -509,6 +509,8 @@
 <script src=RegData_473.js></script>
 <script src=RegData_474.js></script>
 <script src=RegData_475.js></script>
+<script src=RegData_476.js></script>
+<script src=RegData_477.js></script>
 
 <script>
 
