--- a/covid19state.html
+++ b/covid19state.html
@@ -451,6 +451,8 @@
 <script src=USAData_473.js></script>
 <script src=USAData_474.js></script>
 <script src=USAData_475.js></script>
+<script src=USAData_476.js></script>
+<script src=USAData_477.js></script>
 
 <script>
 
