--- a/covid19usa.html
+++ b/covid19usa.html
@@ -474,6 +474,8 @@
 <script src=USAData_473.js></script>
 <script src=USAData_474.js></script>
 <script src=USAData_475.js></script>
+<script src=USAData_476.js></script>
+<script src=USAData_477.js></script>
 
 <script>
 
