Updated data to 07/16/2021 + vaxdata (two days)

--- a/covid19int.html
+++ b/covid19int.html
@@ -511,6 +511,8 @@
 <script src=IntData_475.js></script>
 <script src=IntData_476.js></script>
 <script src=IntData_477.js></script>
+<script src=IntData_478.js></script>
+<script src=IntData_479.js></script>
 
 <script>
 
