--- a/covid19reg.html
+++ b/covid19reg.html
@@ -511,6 +511,8 @@
 <script src=RegData_475.js></script>
 <script src=RegData_476.js></script>
 <script src=RegData_477.js></script>
+<script src=RegData_478.js></script>
+<script src=RegData_479.js></script>
 
 <script>
 
