--- a/covid19state.html
+++ b/covid19state.html
@@ -453,6 +453,8 @@
 <script src=USAData_475.js></script>
 <script src=USAData_476.js></script>
 <script src=USAData_477.js></script>
+<script src=USAData_478.js></script>
+<script src=USAData_479.js></script>
 
 <script>
 
