--- a/covid19usa.html
+++ b/covid19usa.html
@@ -476,6 +476,8 @@
 <script src=USAData_475.js></script>
 <script src=USAData_476.js></script>
 <script src=USAData_477.js></script>
+<script src=USAData_478.js></script>
+<script src=USAData_479.js></script>
 
 <script>
 
