Updated data to 07/18/2021 + vaxdata (two days worth)

--- a/covid19int.html
+++ b/covid19int.html
@@ -513,6 +513,8 @@
 <script src=IntData_477.js></script>
 <script src=IntData_478.js></script>
 <script src=IntData_479.js></script>
+<script src=IntData_480.js></script>
+<script src=IntData_481.js></script>
 
 <script>
 
