--- a/covid19reg.html
+++ b/covid19reg.html
@@ -513,6 +513,8 @@
 <script src=RegData_477.js></script>
 <script src=RegData_478.js></script>
 <script src=RegData_479.js></script>
+<script src=RegData_480.js></script>
+<script src=RegData_481.js></script>
 
 <script>
 
