--- a/covid19usa.html
+++ b/covid19usa.html
@@ -478,6 +478,8 @@
 <script src=USAData_477.js></script>
 <script src=USAData_478.js></script>
 <script src=USAData_479.js></script>
+<script src=USAData_480.js></script>
+<script src=USAData_481.js></script>
 
 <script>
 
