--- a/covid19state.html
+++ b/covid19state.html
@@ -455,6 +455,8 @@
 <script src=USAData_477.js></script>
 <script src=USAData_478.js></script>
 <script src=USAData_479.js></script>
+<script src=USAData_480.js></script>
+<script src=USAData_481.js></script>
 
 <script>
 
