--- a/covid19int.html
+++ b/covid19int.html
@@ -515,6 +515,7 @@
 <script src=IntData_479.js></script>
 <script src=IntData_480.js></script>
 <script src=IntData_481.js></script>
+<script src=IntData_482.js></script>
 
 <script>
 
