--- a/covid19reg.html
+++ b/covid19reg.html
@@ -515,6 +515,7 @@
 <script src=RegData_479.js></script>
 <script src=RegData_480.js></script>
 <script src=RegData_481.js></script>
+<script src=RegData_482.js></script>
 
 <script>
 
