--- a/covid19state.html
+++ b/covid19state.html
@@ -457,6 +457,7 @@
 <script src=USAData_479.js></script>
 <script src=USAData_480.js></script>
 <script src=USAData_481.js></script>
+<script src=USAData_482.js></script>
 
 <script>
 
