--- a/covid19usa.html
+++ b/covid19usa.html
@@ -480,6 +480,7 @@
 <script src=USAData_479.js></script>
 <script src=USAData_480.js></script>
 <script src=USAData_481.js></script>
+<script src=USAData_482.js></script>
 
 <script>
 
